--- a/WebContent/resources/Dashboard.css
+++ b/WebContent/resources/Dashboard.css
@@ -114,7 +114,7 @@
 	display:inline-block;  
     _display:inline;  
     *display:inline;  
-	width:500px;height:300px;
+	width:510px;height:200px;
 	text-align: left;
 	margin-right: 30px;
 }
@@ -124,13 +124,21 @@
 	display:inline-block;  
     _display:inline;  
     *display:inline;  
-	width:300;height:170px;}
+	width:300;height:200px;}
 	
 
 /* Set the body content of index.jsp*/
-.div16{	padding-top: 40px;padding-bottom: 40px;}
+.div16{	padding-top: 30px;}
 
-hr{ width: 60%; color: black;height:1px;}
+#authorHr{ width: 60%; color: black;height:1px;}
+#indexHr{
+	border: 0; 
+  	height: 1px; 
+  	background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  	background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  	background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  	background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
+}
 
 #imgAuthor{width: 193px; height: 193px; object-fit: cover;}
 #imgUniversityIcon{width: 300px; height: 170px; object-fit: cover;}
