--- a/WebContent/resources/css/DataQuery.css
+++ b/WebContent/resources/css/DataQuery.css
@@ -18,6 +18,7 @@
   	padding:0 0 0 10px;
   	border-radius:5px;
   	font-family: helvetica-w01-light,helvetica-w02-light,sans-serif; 
+  	vertical-align: middle;
 }
 
 .dropdown{
@@ -44,7 +45,9 @@
   display: block;
 }
 
-.dropdown-content {
+
+
+ .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -62,6 +65,9 @@
 }
 
 .dropdown-content a:hover {background-color: #f1f1f1;}
+
+
+
 
 .dropdown:hover .dropdown-content {
     display: block;
