--- a/WebContent/resources/css/Dashboard.css
+++ b/WebContent/resources/css/Dashboard.css
@@ -8,6 +8,7 @@
 .font_4 {font: normal normal normal 25px/1.4em museo-slab-w01-100,serif ;color:#353535;font-weight: bold;}
 .font_5 {font: normal normal normal 20px/1.4em museo-slab-w01-100,serif ;color:#353535;font-weight: bold;}
 .font_6 {font-family: Blippo, fantasy;font-size: 60px;}
+.font_7 {font-family: Blippo, fantasy;font-size: 30px;margin-left: 60px; text-align:left;color:#5B3481;}
 
 .color_1 {color: #6B6B2E;}
 .color_2 {color: #3284A8;}
@@ -99,14 +100,14 @@
 /* Set the main div of index.jsp*/
 .div12{
 	margin:0 auto;
-	width: 980px; height: 1400px; 
+	width: 980px; height: 1500px; 
 }
 
 /* Set the body of index.jsp*/
 .div13{
 	background-color: rgb(242, 240, 240);
 	top: 55px; 
-	width: 980px; height: 1312px;
+	width: 980px; height: 1412px;
 	text-align: center;
 }
 
