--- a/WebContent/resources/css/DataQuery.css
+++ b/WebContent/resources/css/DataQuery.css
@@ -11,16 +11,16 @@
 	margin: 0 0 0 10px; 
 }
 
-#dropholder{
+.dropholder{
 	background-color: #8963B7;
   	width: 190px;
   	height: 40px;
-	margin: 0 0 0 20px; /* top right bottom left*/
+	margin: 0 0 0 10px; /* top right bottom left */
   	padding:0 0 0 10px;
   	border-radius:5px;
   	font-family: helvetica-w01-light,helvetica-w02-light,sans-serif; 
   	vertical-align: middle;
-}
+} 
 
 .dropdown{
 	font-size: 16px;
@@ -45,9 +45,8 @@
 }
 
 #inputField{
-	width: 190px;
   	height: 40px;
-	margin: 2px 0 0 20px; /* top right bottom left*/
+	margin: 2px 0 0 10px; /* top right bottom left*/
   	font-family: helvetica-w01-light,helvetica-w02-light,sans-serif; 
 }
 
@@ -170,4 +169,9 @@ ul.tabs li{
 	color: #8963B7;
 	text-align: left;
 	margin: 10px 60px 10px 60px;
+}
+
+.queryItemDelete{
+	width: 20px;
+	height: 20px;
 }
