--- a/WebContent/resources/css/DataQuery.css
+++ b/WebContent/resources/css/DataQuery.css
@@ -1,48 +1,36 @@
 @CHARSET "UTF-8";
 
 .dropSelect {
-	
-   	background-color: #8963B7;
-    color: white;
+    
     font-size: 16px;
-    border: none;    
-    cursor: pointer;
+    border: none; 
     font-family: helvetica-w01-light,helvetica-w02-light,sans-serif; 
-	margin: 0 0 0 10px; 
+    cursor: pointer;
+ 	background-color: #D8CEF6;
+ 	color: #7C34A3;
+	/* margin: 0 0 0 10px;  */
 }
 
-.dropholder{
-	background-color: #8963B7;
-  	width: 190px;
-  	height: 40px;
-	margin: 0 0 0 10px; /* top right bottom left */
-  	padding:0 0 0 10px;
-  	border-radius:5px;
-  	font-family: helvetica-w01-light,helvetica-w02-light,sans-serif; 
-  	vertical-align: middle;
-} 
 
 .dropdown{
-	font-size: 16px;
-  	color:#fff;  	
-	font-family: helvetica-w01-light,helvetica-w02-light,sans-serif; 	
-   	margin-left:10px;
-  	float: left;
-  	width: 100px;
-  	padding:10px 0 10px 0; 	
-  	border-radius:0 5px 5px 0;
-  	border-left:1px solid #ffffff;
-  	text-align: right;
-  	position: relative;
+	width: 100px;
+	background-color: #D8CEF6;
+	text-align: right;
+	padding:10px 5px 10px 20px; 
+	border-radius:5px;
 }
 
-.dropP{
+.dropdownCell{
+	background-color: #f3cac9;
+}
+
+/* .dropP{
   	float: left;
   	line-height:10px;
   	vertical-align: middle;
 	font-size: 16px;
   	color:#ffffff; 
-}
+} */
 
 #inputField{
   	height: 40px;
@@ -51,7 +39,7 @@
 }
 
 .backgroundDropdown{
-	background-color: #ea808f;
+	background-color: #f3cac9;color: #911716;
 }
 
 input[type="text"] {
@@ -72,7 +60,7 @@ input[type="text"] {
 	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
 	font-size: 12px;
 	background-color: rgb(242, 240, 240);
-	margin: 20px 60px 0 65px;
+	margin: 0 60px 0 65px;
 	width: 850px;
 	border-collapse: collapse;
 	text-align: left;
@@ -102,7 +90,7 @@ input[type="text"] {
 }
 
 #runQuery{
-	background-color: #5BB069;
+	background-color: #DBA425;
 	color: #ffffff;
 	border-radius:5px;
 	border: none;
@@ -110,25 +98,63 @@ input[type="text"] {
 }
 
 .fileButton{
-	background-color: #8963B7;
+	background-color: #693794;
 	color: #ffffff;
 	border-radius:5px;
 	border: none;
-	margin: 20px 0 20px 50px;
+	margin: 20px 0 20px 20px;
 	padding: 10px 30px 10px 30px;
 	font-family: helvetica-w01-light,helvetica-w02-light,sans-serif; 
 	font-size: 16px;
 	text-decoration:none;
 }
 
+/* constraint table design */
+.consTable{
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-size: 12px;
+	background-color: rgb(242, 240, 240);
+	margin: 0 60px 0 65px;
+	width: 850px;
+	border-collapse: collapse;
+	text-align: left;
+}
+
+.consTable th
+{
+	font-size: 14px;
+	font-weight: normal;
+	color: #7C34A3;
+	padding: 10px 8px;
+	border-bottom: 2px solid #60128B;
+}
+
+.consTable td
+{
+	color: #8F62A7;
+	padding: 9px 8px 0px 8px;
+}
+
+.consTableCell th{
+	color: #914f56;
+	border-bottom: 2px solid #780d3f;
+}
+
+.consTableCell td{
+	color: #7d5057;
+}
+
+
+
 
 /* tabs*/
 .container{
-	margin: 20px 60px 20px 60px;
+	margin: 20px 60px 0px 60px;
 	font-family: helvetica-w01-light,helvetica-w02-light,sans-serif; 
 	line-height: 1.6;
 	width: 850px;
 	text-align: left;
+	padding-bottom:40px;
 }
 
 ul.tabs{
@@ -146,13 +172,13 @@ ul.tabs li{
 	border-top-right-radius:5px;
 }
 
-.tab-link.current{background-color: #8963B7;}
+.tab-link.current{background-color: #693794;}
 .tab-link{background-color: #b6b6b6;}
 
 .tab-content{
 	display: none;
 	padding: 15px;
-	border: 1px solid #8963B7;
+	border: 1px solid #693794;
 	background-color: #fff;
 	height: 700px;
 	overflow-y: scroll;
@@ -166,12 +192,28 @@ ul.tabs li{
 #QueryText{
 	font-family: helvetica-w01-light,helvetica-w02-light,sans-serif;
 	font-size:16px;
-	color: #8963B7;
+	color: #693794;
 	text-align: left;
 	margin: 10px 60px 10px 60px;
 }
 
 .queryItemDelete{
-	width: 20px;
-	height: 20px;
+	width: 15px;
+	height: 15px;
+}
+
+#radioButtonDiv{
+	margin:40px 0 10px 65px;
+	font-size: 17px; 
+	color:#7C34A3; 
+	text-align: left;
+
+}
+
+#historyTable{
+	margin-top: 20px;
+	height:157px;
+	width: 920px;
+	overflow-y:scroll;
+	overflow-x: hidden;
 }
