basic history function is finished

--- a/WebContent/resources/css/Dashboard.css
+++ b/WebContent/resources/css/Dashboard.css
@@ -22,6 +22,7 @@ margin: 20px 0 0 60px; text-align:left; color:#c97e87;}
 .color_1 {color: #6B6B2E;}
 .color_2 {color: #3284A8;}
 .color_3 {color: #666666;}
+.color_4 {color: #8c8b8b;}
 
 h3{
 	color: #fff;
